--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -25,22 +25,23 @@ messages:
     - "%prefix% <#e173fd>Помощь по команде /display"
     - "<#adf3fd>/display help <#8e8e8e>- <#d0d0d0>Показать помощь"
     - "<#adf3fd>/display reload <#8e8e8e>- <#d0d0d0>Перезагрузить конфиг"
-    - "<#adf3fd>/display create [block | item | text | clone] <id> [newid только для clone] <#8e8e8e>- <#d0d0d0>Создать Display-сущность с ID <id>"
+    - "<#adf3fd>/display create [block | item | text | clone] <id> [new_id только для clone] <#8e8e8e>- <#d0d0d0>Создать Display-сущность с ID <id>"
     - "<#adf3fd>/display load <uuid> <id> <#8e8e8e>- <#d0d0d0>Добавить существующую Display-сущность в список под ID <id>"
     - "<#adf3fd>/display delete [<id> | *] <#8e8e8e>- <#d0d0d0>Удалить объект (или все объекты) с ID <id>"
+    - "<#adf3fd>/display list <#8e8e8e>- <#d0d0d0>Посмотреть список всех объектов"
     - "<#adf3fd>/display edit <id> <type> <value> <#8e8e8e>- <#d0d0d0>Изменить параметр <type> на значение <value> у объекта с ID <id>"
-    - "  <#c0c4fd>• id <newid> <#8e8e8e>- <#d0d0d0>Изменить ID объекта на другой"
+    - "  <#c0c4fd>• id <new_id> <#8e8e8e>- <#d0d0d0>Изменить ID объекта на другой"
     - "  <#c0c4fd>• scale <x>,<y>,<z> <#8e8e8e>- <#d0d0d0>Изменить размеры объекта на указанные"
-    - "  <#c0c4fd>• billdboard <billdboard> <#8e8e8e>- <#d0d0d0>Изменить режим поворота объекта"
+    - "  <#c0c4fd>• billboard <billboard> <#8e8e8e>- <#d0d0d0>Изменить режим поворота объекта"
     - "  <#c0c4fd>• brightness <block>,<sky> <#8e8e8e>- <#d0d0d0>Изменить яркость объекта"
-    - "  <#c0c4fd>• shadow <radius,strenght> <#8e8e8e>- <#d0d0d0>Изменить радиус и силу тени объекта"
+    - "  <#c0c4fd>• shadow <radius>,<strength> <#8e8e8e>- <#d0d0d0>Изменить радиус и силу тени объекта"
     - "  <#c0c4fd>• view_range <range> <#8e8e8e>- <#d0d0d0>Изменить дальность прорисовки сущности"
     - "  <#c0c4fd>• material <material> <#8e8e8e>- <#d0d0d0>Изменить материал. Только для block и item"
-    - "  <#c0c4fd>• glowing [on | off | <r>,<g>,<b>] <#8e8e8e>- <#d0d0d0>Изменить подсветку. Только для block и item"
+    - "  <#c0c4fd>• glowing [on | off | <r>,<g>,\\<b>] <#8e8e8e>- <#d0d0d0>Изменить подсветку. Только для block и item"
     - "  <#c0c4fd>• display_transform <transform> <#8e8e8e>- <#d0d0d0>Изменить режим отображения объекта. Только для item"
     - "  <#c0c4fd>• text [on | off] <#8e8e8e>- <#d0d0d0>Начать редактирование текста через чат. Только для text"
     - "  <#c0c4fd>• alignment <alignment> <#8e8e8e>- <#d0d0d0>Изменить выравнивание текста. Только для text"
-    - "  <#c0c4fd>• background <r>,<g>,<b> <#8e8e8e>- <#d0d0d0>Изменить цвет фона. Только для text"
+    - "  <#c0c4fd>• background <r>,<g>,\\<b> <#8e8e8e>- <#d0d0d0>Изменить цвет фона. Только для text"
     - "  <#c0c4fd>• line_width <width> <#8e8e8e>- <#d0d0d0>Изменить ширину строки. Только для text"
     - "  <#c0c4fd>• see_through [true | false] <#8e8e8e>- <#d0d0d0>Изменить отображение объекта через блоки. Только для text"
     - "  <#c0c4fd>• text_opacity <opacity> <#8e8e8e>- <#d0d0d0>Изменить прозрачность текста. Только для text"
