--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -78,20 +78,20 @@ messages:
     notFoundCoords: "<prefix> <red>Не найдены координаты!"
     invalidCoords: "<prefix> <red>Неверный формат координат!"
   successfully:
-    reload: "<prefix> <green>Конфиг плагина успешно перезагружен!"
+    reload: "<prefix> Конфиг плагина успешно <green>перезагружен</green>!"
     create:
-      new: "<prefix> <green>Новый объект для отображения с ID <id> успешно создан!"
-      clone: "<prefix> <green>Объект с ID <id> успешно клонирован!"
+      new: "<prefix> Новый объект для отображения с <green>ID <id></green> успешно создан!"
+      clone: "<prefix> Объект с <green>ID <id></green> успешно клонирован!"
       # Используйте <uuid> для UUID сущности
-    load: "<prefix> <green>Сущность с UUID <uuid> успешно добавлена в список под ID <id>!"
+    load: "<prefix> Сущность с <green>UUID <uuid></green> успешно добавлена в список под <green>ID <id></green>!"
     delete:
-      id: "<prefix> <green>Объект с ID <id> успешно удалён!"
-      all: "<prefix> <green>Все объекты успешно удалёны!"
+      id: "<prefix> Объект с <green>ID <id></green> успешно удалён!"
+      all: "<prefix> <green>Все объекты</green> успешно удалёны!"
     edit:
-      edit: "<prefix> <green>Объект с ID <id> успешно отредактирован!"
+      edit: "<prefix> Объект с <green>ID <id></green> успешно отредактирован!"
       # Используйте <type> для указания параметра, <value> для указания значения (только для этой строчки)
-      info: "<prefix> <green>Объект с ID <id> у параметра <type> имеет значение <value>"
+      info: "<prefix> Объект с <green>ID <id></green> у параметра <green><type></green> имеет значение <green><value></green>"
     teleport:
-      pos: "<prefix> <green>Объект с ID <id> успешно перемещён!"
-      here: "<prefix> <green>Объект с ID <id> успешно перемещён!"
-      to: "<prefix> <green>Вы успешно переместились к объекту с ID <id>!"
+      pos: "<prefix> Объект с <green>ID <id></green> успешно перемещён!"
+      here: "<prefix> Объект с <green>ID <id></green> успешно перемещён!"
+      to: "<prefix> Вы успешно переместились к объекту с <green>ID <id></green>!"
