--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,7 +2,7 @@ name: Display
 version: 1.8
 main: me.itzisonn_.display.DisplayPlugin
 api-version: 1.19
-softdepend: [PlaceholderAPI]
+softdepend: [PlaceholderAPI, ProtocolLib]
 author: ItzIsonn_
 description: 'Interaction with display entities'
 
